fixed alignment issues in pdf document, changed the display of missing category in pod rental calculation, expense management and expense category management page

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -22,15 +22,6 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-/* Typography */
-/* .form-container h2 {
-  font-family: "Poppins", sans-serif;
-  font-weight: bold;
-  color: #333333;
-  margin-bottom: 20px;
-  text-align: center;  
-} */
-
 label {
   font-family: "Poppins", sans-serif;
   font-weight: bold;
@@ -73,37 +64,6 @@ select:focus {
 .form-row .form-group {
   width: 48%;
 }
-
-/* button[type="submit"] {
-  background: linear-gradient(90deg, #00b894, #0984e3);
-  color: #ffffff;
-  border: none;
-  padding: 10px 20px;
-  font-family: "Poppins", sans-serif;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background 0.3s ease;
-}
-
-button[type="submit"]:hover {
-  background: linear-gradient(90deg, #009e74, #0777d1);
-}
-
-button[type="button"] {
-  background-color: #dfe6e9;
-  color: #636e72;
-  padding: 10px 20px;
-  font-family: "Poppins", sans-serif;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  margin-left: 10px;
-  transition: background-color 0.3s ease;
-}
-
-button[type="button"]:hover {
-  background-color: #b2bec3;
-} */
 
 /* Responsive layout for mobile devices */
 @media (max-width: 768px) {
